fix: google auth, layout shift on user menu click, recipe form responsive

--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -122,6 +122,6 @@
   }
 }
 
-/* html {
+html {
   overflow-y: scroll;
-} */
+}
